last commit claimed to have fixed the masthead overflow into the container-fluid div, but this was not the case.  This commit addresses the underlying cause of the overflow and fixes the margins.  In particular, the styling for #masthead had padding: 5px which caused the overflow.  To keep the padding and prevent the overflow, I added width: calc(100% - 10px) to the #masthead styling.  I also removed padding: 0px; since this was overridden by padding: 5px;

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -26,13 +26,17 @@ input[type="checkbox"] {
 #masthead {
 	background-color: #038;
 	margin: 0;
-	padding: 0;
 	padding: 5px;
+    width: calc(100% - 10px);	
 }
 
 /* Bootstrap Overrides */
 .container-fluid {
-	padding: 0.5em;
+	padding-top: 0.5em;
+}
+
+.fix-content-margin {
+   margin-left: 0px !important;
 }
 
 .webwork_logo {
@@ -937,6 +941,4 @@ table#grades_table pre{
     min-width:43px;
 }
 
-#content.span12.fix-content-margin {
-   margin-left: 0px !important;
-}
+
